Update and rename ques1.html to index.html

--- a/Question-1/index.html
+++ b/Question-1/index.html
@@ -25,7 +25,7 @@
     <p>We can see the the statement which we wrote in js in console.</p>
     <img src="dev-tool.png" width="1200px" alt="">
      <br> <br>
-     <a href="http://" target="_blank"><button>View Code</button></a>
+     <a href="https://github.com/WebTechnologyCS3403/Js-Assignment-1/tree/main/Question-1" target="_blank"><button>View Code</button></a>
     </div>
     <script>
 
