--- a/Question-2/index.html
+++ b/Question-2/index.html
@@ -21,7 +21,7 @@
     <img src="var-js.png" alt="js-code"> 
     <p>This is the Screenshot of the console output of the code in tihs Question you can verify the same by going to console of this HTML page. </p>
     <img src="dev-tool.png" width="1260" alt="console">
-    <a href="" target="_blank"><button>View Code</button></a>
+    <a href="https://github.com/WebTechnologyCS3403/Js-Assignment-1/tree/main/Question-2" target="_blank"><button>View Code</button></a>
 
     <!-- JavaScript code used in this Question  -->
     <script>
