--- a/Question-3/index.html
+++ b/Question-3/index.html
@@ -39,7 +39,7 @@
             <td><img src="notdefined.png" alt="notdefined"></td>
         </tr>
     </table>
-
+ <a href="https://github.com/WebTechnologyCS3403/Js-Assignment-1/tree/main/Question-3" target="_blank"><button>View Code</button></a>
     <script>
     //  code to demonstrate not defined in javaScript
             console.log(b);
@@ -49,7 +49,7 @@
             console.log(vkg);
 
     </script>
-   <a href="" target="_blank"><button>View Code</button></a>
+  
 </div>
 </body>
 </html>
