--- a/Question-3/index.html
+++ b/Question-3/index.html
@@ -41,10 +41,10 @@
     </table>
  <a href="https://github.com/WebTechnologyCS3403/Js-Assignment-1/tree/main/Question-3" target="_blank"><button>View Code</button></a>
     <script>
-    //  code to demonstrate not defined in javaScript
+    //  code to demonstrate not defined in javaScript as we haven't defined the b here
             console.log(b);
 
-// code to demstrate undefined in JavaScript
+   // code to demstrate undefined in JavaScript
             var vkg;
             console.log(vkg);
 
